Fix spotlight video not showing at smaller screen widths

--- a/css/style.css
+++ b/css/style.css
@@ -1703,8 +1703,10 @@ a:hover {
     }
     
     .spotlight-video {
+        width: 100%;
         max-width: 500px;
         margin: 0 auto;
+        padding-bottom: 56.25%;
     }
     
     .cat-detail-grid {
